[gd_scene load_steps=7 format=3 uid="uid://c3q268xofq4j1"]

[ext_resource type="Script" uid="uid://r6623f3cxxj3" path="res://Scripts/bike.gd" id="1_8f0co"]
[ext_resource type="Texture2D" uid="uid://dhn0xe4d2dfy" path="res://Assets/bikes/bike1.png" id="2_8f0co"]
[ext_resource type="Texture2D" uid="uid://b1f00kkg56hw2" path="res://Assets/ui_elements/steal_progress.png" id="3_hqb8h"]
[ext_resource type="Script" uid="uid://crbbj1mioxkxm" path="res://Scripts/bike_progress.gd" id="3_udqgf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5v1tr"]
size = Vector2(76, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ikia7"]
size = Vector2(144, 84)

[node name="Bike" type="StaticBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_8f0co")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9.42)
shape = SubResource("RectangleShape2D_5v1tr")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-7.1525574e-07, -8.34465e-07)
scale = Vector2(2, 2)
texture = ExtResource("2_8f0co")
region_enabled = true
region_rect = Rect2(0, 0, 40, 20)

[node name="BikeHitbox" type="Area2D" parent="."]
collision_layer = 0

[node name="HitboxShape" type="CollisionShape2D" parent="BikeHitbox"]
shape = SubResource("RectangleShape2D_ikia7")

[node name="StealingProgressBar" type="ProgressBar" parent="."]
visible = false
z_index = 3
offset_top = -60.0
offset_right = 4.0
offset_bottom = -33.0
show_percentage = false
script = ExtResource("3_udqgf")

[node name="ProgressSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, -60)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_hqb8h")
hframes = 4
vframes = 4

[connection signal="body_entered" from="BikeHitbox" to="." method="_on_bike_hitbox_body_entered"]
[connection signal="body_exited" from="BikeHitbox" to="." method="_on_bike_hitbox_body_exited"]
[connection signal="value_changed" from="StealingProgressBar" to="StealingProgressBar" method="_on_value_changed"]
